Update app store link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<h2>Track Events.</h2>
 					<h2>Grow the map.</h2>
 				</div><br/>
-				<a class="primary-btn app-store-btn" href="https://itunes.apple.com/app/blear-create-blurry-wallpapers/id994182280">Get it on the App Store</a>
+				<a class="primary-btn app-store-btn" href="https://testflight.apple.com/join/U7huTQ7J">Join Beta!</a>
 			</div>
 			<div class="responsive iphone">
 				<div class="iphone-screenshot">
