Update ball png

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header class="container">
 			<div class="responsive intro-container">
 				<div class="app-icon">
-					<img alt="App icon" src="app-icon.png">
+					<img alt="App icon" src="orange_trans_ball.png">
 					<p>Local Hoops</p>
 				</div>
 				<div class="intro">
