Update app store button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<h2>Track Events.</h2>
 					<h2>Grow the map.</h2>
 				</div><br/>
-				<a class="primary-btn app-store-btn" href="https://testflight.apple.com/join/U7huTQ7J">Join Beta!</a>
+				<a href="https://itunes.apple.com/us/app/local-hoops/id1452756521"><img class="app-store-btn" src="download.svg"/></a>
 			</div>
 			<div class="responsive iphone">
 				<div class="iphone-screenshot">
