Update for version 2.0

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 		<header class="container">
 			<div class="responsive intro-container">
 				<div class="app-icon">
-					<img alt="App icon" src="orange_trans_ball.png">
-					<p>Local Hoops</p>
+					<img alt="App icon" src="./images/orange_trans_ball.png">
+					<h1>LocalHoops</h1>
 				</div>
 				<div class="intro">
 					<h2>Find basketball courts.</h2>
-					<h2>Track Events.</h2>
+					<h2>Save your favorites.</h2>
 					<h2>Grow the map.</h2>
 				</div><br/>
-				<a href="https://itunes.apple.com/us/app/local-hoops/id1452756521"><img class="app-store-btn" src="download.svg"/></a>
+				<a href="https://itunes.apple.com/us/app/local-hoops/id1452756521"><img class="app-store-btn" src="./images/download.svg"/></a>
 			</div>
 			<div class="responsive iphone">
 				<div class="iphone-screenshot">
-					<img src="app-screenshot.jpg" alt="App screenshot">
+					<img src="./images/screenshots/map-results.png" alt="App screenshot">
 				</div>
-				<img class="iphone-mask" src="iphone.png">
+				<img class="iphone-mask" src="./images/iphone.png">
 			</div>
 		</header>
 		<footer class="container footer">
