Add data deletion guide

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			<div class="responsive contact">
 				<a href="mailto:eric.furspan@gmail.com?subject=Local Hoops">Support</a>
 				<a href="./privacy_policy.html">Privacy Policy</a>
+				<a href="./data-deletion-guide.html">Data Deletion Guide</a>
 			</div>
 		</footer>
 		<!-- insert GA here -->
